# sentineliq

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 304d08026a0a_add_ai_reports.py  50ac1da3b9e0_add_detection_rules.py  57d1ac443836_create_initial_soc_models.py  7292b645f9d0_add_audit_logs.py  776d395833e1_update_alerts_for_detection.py  78268944ba19_add_destination_port_to_security_events.py  99c72af5643b_extend_incidents_for_investigation_.py  d330a176f2a0_add_incident_alert_links.py  eb847870b34a_add_analyst_notes.py  ee0530f55789_add_webhooks.py
backend/app/: main.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  ai_report.py  alert.py  analyst_note.py  asset.py  audit_log.py  detection_rule.py  incident.py  incident_alert.py  log_source.py  organization.py  raw_log.py  security_event.py  user.py  webhook.py  webhook_delivery.py
backend/app/schemas/: alert.py  analyst_note.py  asset.py  detection_rule.py  incident.py  ingestion.py  log_source.py  security_event.py  webhook.py
backend/app/scripts/: seed_detection_rules.py
backend/app/services/: ai_service.py  alert_service.py  asset_service.py  audit_service.py  automation_service.py  context_builder_service.py  detection_rule_seed.py  detection_rule_service.py  detection_service.py  event_service.py  incident_service.py  ingestion_service.py  (+5 more)
backend/tests/: test_ai_service.py  test_config.py
(+45 files in other folders)
