[project]
name = "sentineliq-backend"
version = "0.1.0"
description = "SentinelIQ SOC platform backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "SQLAlchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.5.0",
    "psycopg[binary]>=3.2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]